# Mangatan

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  changelog.txt  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: android_publish.yml  build android.yml  build-android-debug.yml  build-debug-apk.yml  cleanup-artifacts.yml  core-rust.yml  docker.yml  jre.yml  optional-rust.yml  publish.yml
WebUI/: package.json  vite.config.ts
WebUI/public/locales/: en.json
WebUI/src/: App.tsx  index.css
WebUI/src/Manatan/: OCRManager.tsx  types.ts
WebUI/src/Manatan/components/: DictionaryView.tsx  ImageOverlay.tsx  KanjiView.tsx  Pronunciation.tsx  SettingsModal.tsx  YomitanPopup.tsx
WebUI/src/Manatan/services/: ServerMetaStorage.ts
WebUI/src/Manatan/utils/: anki.ts  api.ts  contextMenuTrigger.ts  customCss.ts  glossaryExport.test.ts  glossaryExport.ts  lookupTrigger.ts  pitchAccentExport.test.ts  wordAudio.ts  (+3 more)
WebUI/src/base/: AppRoute.constants.ts  IsoLanguages.ts
crates/novel-server/src/: lib.rs  types.rs
crates/ocr-server/: Cargo.toml
crates/ocr-server/src/: handlers.rs  jobs.rs  language.rs  logic.rs  state.rs
crates/ocr-server/tests/: merge_regression.rs  validate_submission.rs
crates/sync-server/src/: lib.rs  merge.rs  types.rs
crates/video-server/: Cargo.toml
crates/video-server/src/: ffmpeg.rs  lib.rs  state.rs  transcoder.rs
crates/yomitan-server/: Cargo.toml
crates/yomitan-server/src/: handlers.rs  import.rs  lib.rs  lookup.rs  state.rs
docs/: LN_READER_OPTIMIZATION.md
ocr-server/: deno.json  server.ts
(+141 files in other folders)
