[package]
name = "manatan-ocr-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true 
avif-decode.workspace = true
axum.workspace = true 
base64.workspace = true 
bytes.workspace = true 
chrome_lens_ocr.workspace = true 
futures.workspace = true
image.workspace = true 
r2d2 = "0.8"
r2d2_sqlite = "0.24"
reqwest.workspace = true 
rusqlite = { version = "0.31", features = ["bundled"] }
serde.workspace = true 
serde_json .workspace = true 
tokio.workspace = true 
tracing.workspace = true 
lazy_static = "1.5"
regex = "1.12"   

[dev-dependencies]
walkdir = "2"
pretty_assertions = "1"

[lints]
workspace = true
