[package]
name = "manatan-video-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
directories = "6.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = "0.7"
parking_lot = "0.12"

[lints]
workspace = true
